访问路径问题

--- a/crtvn-center/src/main/resources/templates/student/studentInfo.html
+++ b/crtvn-center/src/main/resources/templates/student/studentInfo.html
@@ -70,4 +70,10 @@
 		</div>
 	</div>
 </body>
+<script type="text/javascript" src="/js/crtvn/common/config.js"></script>
+<script>
+	function getBaseUrl(){
+		return base_url;
+	}
+</script>
 </html>
