--- a/crtvn-center/src/main/resources/templates/sys/collegeInfo.html
+++ b/crtvn-center/src/main/resources/templates/sys/collegeInfo.html
@@ -107,4 +107,10 @@
 
 
 </body>
+<script type="text/javascript" src="/js/crtvn/common/config.js"></script>
+<script>
+	function getBaseUrl(){
+		return base_url;
+	}
+</script>
 </html>
