--- a/crtvn-center/src/main/resources/templates/sys/index.html
+++ b/crtvn-center/src/main/resources/templates/sys/index.html
@@ -100,4 +100,10 @@
     	
     </script>
 </body>
+<script type="text/javascript" src="/js/crtvn/common/config.js"></script>
+<script>
+    function getBaseUrl(){
+        return base_url;
+    }
+</script>
 </html>
