--- a/crtvn-center/src/main/resources/templates/sys/login.html
+++ b/crtvn-center/src/main/resources/templates/sys/login.html
@@ -5,7 +5,7 @@
 <title></title>
 <link rel="stylesheet" type="text/css" href="/css/login.css" />
 <script src="/js/jquery-1.9.1.min.js" ></script>
-	
+
 <script type="text/javascript" src="/js/crtvn/sys/login.js"></script>
 
 </head>
@@ -61,4 +61,11 @@
 	</div>
 
 </body>
+
+<script type="text/javascript" src="/js/crtvn/common/config.js"></script>
+<script>
+	function getBaseUrl(){
+		return base_url;
+	}
+</script>
 </html>
