--- a/crtvn-center/src/main/resources/templates/classroom/classroomDetails.html
+++ b/crtvn-center/src/main/resources/templates/classroom/classroomDetails.html
@@ -95,4 +95,11 @@
 		</div>
 	</div>
 </body>
+
+<script type="text/javascript" src="/js/crtvn/common/config.js"></script>
+<script>
+	function getBaseUrl(){
+		return base_url;
+	}
+</script>
 </html>
