--- a/crtvn-center/src/main/resources/templates/classs/classsDetails.html
+++ b/crtvn-center/src/main/resources/templates/classs/classsDetails.html
@@ -81,4 +81,11 @@
 	</div>
 
 </body>
+
+<script type="text/javascript" src="/js/crtvn/common/config.js"></script>
+<script>
+	function getBaseUrl(){
+		return base_url;
+	}
+</script>
 </html>
