--- a/crtvn-center/src/main/resources/templates/course/courseDetails.html
+++ b/crtvn-center/src/main/resources/templates/course/courseDetails.html
@@ -112,4 +112,10 @@
     </div>
 </div>
 </body>
+<script type="text/javascript" src="/js/crtvn/common/config.js"></script>
+<script>
+    function getBaseUrl(){
+        return base_url;
+    }
+</script>
 </html>
