--- a/crtvn-center/src/main/resources/templates/course/courseInfo.html
+++ b/crtvn-center/src/main/resources/templates/course/courseInfo.html
@@ -88,4 +88,10 @@
 </div>
 
 </body>
+<script type="text/javascript" src="/js/crtvn/common/config.js"></script>
+<script>
+    function getBaseUrl(){
+        return base_url;
+    }
+</script>
 </html>
