--- a/crtvn-center/src/main/resources/templates/examination/automatic.html
+++ b/crtvn-center/src/main/resources/templates/examination/automatic.html
@@ -83,4 +83,10 @@
 	</div>
 
 </body>
+<script type="text/javascript" src="/js/crtvn/common/config.js"></script>
+<script>
+	function getBaseUrl(){
+		return base_url;
+	}
+</script>
 </html>
