--- a/crtvn-center/src/main/resources/templates/examination/examinationDetails.html
+++ b/crtvn-center/src/main/resources/templates/examination/examinationDetails.html
@@ -45,4 +45,10 @@
 		</div>
 	</div>
 </body>
+<script type="text/javascript" src="/js/crtvn/common/config.js"></script>
+<script>
+	function getBaseUrl(){
+		return base_url;
+	}
+</script>
 </html>
