--- a/crtvn-center/src/main/resources/templates/examination/examinationDetails.html
+++ b/crtvn-center/src/main/resources/templates/examination/examinationDetails.html
@@ -30,7 +30,7 @@
 				<form id="examForm" action="examination/examDataGrid" method="post">
 				
 				<!-- 默认选中条件 -->
-				<input id="examinationId" type="text" value="${examinationId}" style="display:none" />
+				<input id="examinationId" type="text" th:value="${examinationId}" style="display:none" />
 						
 				<table class="margin-bottom-20 table  no-border">
 					<tr>
