--- a/crtvn-center/src/main/resources/templates/examination/manual.html
+++ b/crtvn-center/src/main/resources/templates/examination/manual.html
@@ -41,7 +41,7 @@
 				
 				<h4 style="text-align:center;">排考条件</h4>
 				<!-- 默认选中条件 -->
-				<input id="collegeId" type="text" value="${collegeId}" style="display:none" />															
+				<input id="collegeId" type="text" th:value="${collegeId}" style="display:none" />
 				<table class="table table-bordered">
 					<tr>
 						<td width="10%" align="right" nowrap="nowrap" bgcolor="#f1f1f1">院系：</td>
