--- a/crtvn-center/src/main/resources/templates/student/studentDetails.html
+++ b/crtvn-center/src/main/resources/templates/student/studentDetails.html
@@ -75,58 +75,58 @@
 					<div class="left fl">
 					
 						<!-- 查询条件 -->
-						<input id="studentId" type="text" value="${studentVO.studentId}" style="display:none" />
+						<input id="studentId" type="text" th:value="${studentVO.studentId}" style="display:none" />
 							
 						<div>
 							<label for="">所属院系：</label> <input id="a1" type="text"
-								value="${studentVO.collegeName}" disabled />
+															   th:value="${studentVO.collegeName}" disabled />
 						</div>
 
 						<div>
 							<label for="">所属专业：</label> <input id="a2" type="text"
-								value="${studentVO.professionName}" disabled />
+															   th:value="${studentVO.professionName}" disabled />
 						</div>
 						
 						<div>
 							<label for="">班级：</label> <input id="a3" type="text"
-								value="${studentVO.classsCode}" disabled />
+															 th:value="${studentVO.classsCode}" disabled />
 						</div>
 						
 						<div>
 							<label for="">学号：</label> <input id="a3" type="text"
-								value="${studentVO.SID}" disabled />
+															 th:value="${studentVO.SID}" disabled />
 						</div>
 
 						<div>
 							<label for="">名称：</label> <input id="a4" type="text"
-								value="${studentVO.studentName}" disabled />
+															 th:value="${studentVO.studentName}" disabled />
 						</div>
 						
 					</div>
 					<div class="right fr">
 						 <div>
                             <label for="">性别：</label>
-                            <input value = "${studentVO.gender eq 0 ? '男':'女'}" disabled> 
+                            <input  th:value = "${studentVO.gender eq 0 ? '男':'女'}" disabled>
                         </div>
 
 						<div>
 							<label for="">年龄：</label> <input id="a6" type="text"
-								value="${studentVO.age}" disabled />
+															 th:value="${studentVO.age}" disabled />
 						</div>
 
 						<div>
 							<label for="">身份证：</label> <input id="a7" type="text"
-								value="${studentVO.idcard}" disabled />
+															  th:value="${studentVO.idcard}" disabled />
 						</div>
 												
 						<div>
 							<label for="">联系电话：</label> <input id="a7" type="text"
-								value="${studentVO.phone}" disabled />
+															   th:value="${studentVO.phone}" disabled />
 						</div>
 						
 						<div>
 							<label for="">年级：</label> <input id="a7" type="text"
-								value="${studentVO.grade}" disabled />
+															 th:value="${studentVO.grade}" disabled />
 						</div>
 					</div>
 				</div>
