--- a/crtvn-center/src/main/resources/templates/sys/index.html
+++ b/crtvn-center/src/main/resources/templates/sys/index.html
@@ -101,6 +101,8 @@
     </script>
 </body>
 <script type="text/javascript" src="/js/crtvn/common/config.js"></script>
+<script type="text/javascript" src="/js/crtvn/common/js-cookie.js"></script>
+
 <script>
     function getBaseUrl(){
         return base_url;
