--- a/crtvn-center/src/main/resources/templates/examination/timeDateInfo.html
+++ b/crtvn-center/src/main/resources/templates/examination/timeDateInfo.html
@@ -66,6 +66,7 @@
 </body>
 
 <script type="text/javascript" src="/js/crtvn/common/config.js"></script>
+<script type="text/javascript" src="/js/crtvn/common/js-cookie.js"></script>
 <script>
 	function getBaseUrl(){
 		return base_url;
