--- a/crtvn-center/src/main/resources/templates/course/courseDetails.html
+++ b/crtvn-center/src/main/resources/templates/course/courseDetails.html
@@ -113,6 +113,7 @@
 </div>
 </body>
 <script type="text/javascript" src="/js/crtvn/common/config.js"></script>
+<script type="text/javascript" src="/js/crtvn/common/js-cookie.js"></script>
 <script>
     function getBaseUrl(){
         return base_url;
