--- a/crtvn-center/src/main/resources/templates/examination/examinationDetails.html
+++ b/crtvn-center/src/main/resources/templates/examination/examinationDetails.html
@@ -46,6 +46,7 @@
 	</div>
 </body>
 <script type="text/javascript" src="/js/crtvn/common/config.js"></script>
+<script type="text/javascript" src="/js/crtvn/common/js-cookie.js"></script>
 <script>
 	function getBaseUrl(){
 		return base_url;
