--- a/crtvn-center/src/main/resources/templates/teacher/teacherInfo.html
+++ b/crtvn-center/src/main/resources/templates/teacher/teacherInfo.html
@@ -79,6 +79,7 @@
 	</div>
 </body>
 <script type="text/javascript" src="/js/crtvn/common/config.js"></script>
+<script type="text/javascript" src="/js/crtvn/common/js-cookie.js"></script>
 <script>
 	function getBaseUrl(){
 		return base_url;
